# LeetCodeBot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
cogs/: admin.py  debug.py  help.py  leetcode.py  migration.py
config/: constants.py
core/: leetcode_api.py  leetcode_problem.py  problem_threads.py
db/: database_manager.py  problem.py  problem_threads.py  thread_channel.py
docs/: development-guide.md
docs/architecture/: ARCHITECTURE.md  main-feature.md
tests/: conftest.py  test_leetcode_api.py  test_leetcode_problem_manager.py
utils/: embed_utils.py  handle_leetcode_interation.py
