[project]
name = "leetcode-discord-bot"
version = "0.1.0"
description = "A Discord bot for LeetCode problem management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "bs4>=0.0.2",
  "discord-py>=2.6.4",
  "dotenv>=0.9.9",
  "flask>=3.1.2",
  "flask-sqlalchemy>=3.1.1",
  "pandoc>=2.4",
  "prettyprint>=0.1.5",
  "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = ["ruff>=0.14.14"]

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py313"

[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"
